zu surefire geändert und monocole für GUI Test eingesetzt